# simpeg-drivers

./: .codespellignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  2.0.0  Install_or_Update.bat  LICENSE  MANIFEST.in  README-dev.rst  README.rst  RunDocs.bat  THIRD_PARTY_SOFTWARE.rst  deps-lock-config.yaml  install.bat  meta.yaml  package.rst  py-3.10.conda-lock.yml  py-3.11.conda-lock.yml  py-3.12.conda-lock.yml  py-3.9.conda-lock.yml  pylintrc  pyproject.toml  recipe.yaml
.github/workflows/: issue_to_jira.yml  pytest-unix-os.yaml  pytest-unix-os.yml  pytest-windows.yaml  pytest-windows.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  static-analysis.yml
devtools/: add_url_tag_sha256.py  check-copyright.py  git_message_hook.py  rename_my_app.py  run_conda_lock.py  setup-conda-base.bat  setup-dev.bat  start-app.bat  sync_files.py
docs/: THIRD_PARTY_SOFTWARE.rst  _config.yml  _toc.yml  conf.py  environment.yml  intro.md  references.bib
docs/case_studies/: index.ipynb
docs/case_study/: airborne_tem.ipynb  airborne_tem.py  background.ipynb  background.py  data.ipynb  data.py  dc_resistivity.ipynb  dc_resistivity.py  gravity.ipynb  gravity.py  introduction.ipynb  introduction.py  joint_inversion.ipynb  joint_inversion.py  magnetic.ipynb  magnetic.py  mesh_design.ipynb  mesh_design.py  tipper.ipynb  tipper.py  unconstrained_inversion.ipynb  unconstrained_inversion.py
docs/depth_of_investigation/: sensitivity_cutoff.ipynb
docs/fundamentals/: background.ipynb  data_misfit.ipynb  index.ipynb  mesh_design.ipynb  optimization.ipynb
docs/inversion/: data_misfit.ipynb  data_misfit.py  depth_of_investigation.ipynb  depth_of_investigation.py  fundamentals.ipynb  fundamentals.py  index.ipynb  index.py  joint_inversion.ipynb  joint_inversion.py  mesh_design.ipynb  mesh_design.py  regularization.ipynb  regularization.py
docs/tutorials/: airborne_tem.ipynb  background.ipynb  background.py  dc_resistivity.ipynb  dc_resistivity.py  gravity.ipynb  introduction.ipynb  joint_inversion.ipynb  magnetic.ipynb  magnetic.py  tipper.ipynb
environments/: env-python-3.10.yml  env-python-3.11.yml  env-python-3.12.yml  py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  py-3.11-win-64-dev.conda.lock.yml  py-3.11-win-64.conda.lock.yml  py-3.12-linux-64-dev.conda.lock.yml  py-3.12-linux-64.conda.lock.yml  py-3.12-win-64-dev.conda.lock.yml  py-3.12-win-64.conda.lock.yml  py-3.9-linux-64-dev.conda.lock.yml  py-3.9-linux-64.conda.lock.yml  py-3.9-win-64-dev.conda.lock.yml  py-3.9-win-64.conda.lock.yml
my_app/: __init__.py  main.py
my_app-assets/uijson/: hello.ui.json
my_app/commands/: __init__.py  hello_world.py
simpeg_drivers/: __init__.py  constants.py  driver.py  main.py  options.py  params.py  uijson.py
simpeg_drivers-assets/: MT_fwr_UBC_example.geoh5  __init__.py  colortable.csv  demo.geoh5  inversion_demo.geoh5  plate_simulation_demo.geoh5  time_channels.txt  waveform.txt
simpeg_drivers-assets/Case studies/: dem.npy  gravity.npy  magnetic.npy
simpeg_drivers-assets/uijson/: direct_current_2d_forward.ui.json  direct_current_2d_inversion.ui.json  direct_current_3d_forward.ui.json  direct_current_3d_inversion.ui.json  direct_current_batch2d_forward.ui.json  direct_current_batch2d_inversion.ui.json  direct_current_forward_2d.ui.json  direct_current_forward_3d.ui.json  direct_current_forward_pseudo3d.ui.json  direct_current_inversion_2d.ui.json  direct_current_inversion_3d.ui.json  direct_current_inversion_pseudo3d.ui.json  fdem1d_forward.ui.json  fdem1d_inversion.ui.json  fdem_forward.ui.json  fdem_inversion.ui.json  fem_forward.ui.json  fem_inversion.ui.json  gravity_forward.ui.json  gravity_inversion.ui.json  hello.ui.json  homogeneous_inversion.ui.json  induced_polarization_2d_forward.ui.json  induced_polarization_2d_inversion.ui.json  induced_polarization_3d_forward.ui.json  induced_polarization_3d_inversion.ui.json  induced_polarization_batch2d_forward.ui.json  induced_polarization_batch2d_inversion.ui.json  induced_polarization_forward_2d.ui.json  induced_polarization_forward_3d.ui.json  induced_polarization_forward_pseudo3d.ui.json  induced_polarization_inversion_2d.ui.json  induced_polarization_inversion_3d.ui.json  induced_polarization_inversion_pseudo3d.ui.json  joint_cross_gradient_inversion.ui.json  joint_petrophysics_inversion.ui.json  joint_pgi_inversion.ui.json  joint_surveys_inversion.ui.json  magnetic_scalar_forward.ui.json  magnetic_scalar_inversion.ui.json  (+13 more)
simpeg_drivers/commands/: __init__.py  hello_world.py
simpeg_drivers/components/: __init__.py  data.py  locations.py  mesh.py  meshes.py  models.py  preprocessing.py  topography.py  utils.py  windows.py
simpeg_drivers/depth_of_investigation/: __init__.py
simpeg_drivers/electricals/: __init__.py  driver.py  options.py  params.py
simpeg_drivers/electromagnetics/: __init__.py  base_1d_driver.py  base_1d_options.py  driver.py
simpeg_drivers/homogeneous/: driver.py  options.py
simpeg_drivers/joint/: constants.py  driver.py  options.py  params.py
simpeg_drivers/line_sweep/: driver.py
simpeg_drivers/natural_sources/: __init__.py
simpeg_drivers/plate_simulation/: __init__.py  driver.py  logger.py  options.py  utils.py
simpeg_drivers/potential_fields/: __init__.py
simpeg_drivers/utils/: __init__.py  mesh.py  meshes.py  nested.py  regularization.py  surveys.py  testing.py  tile_estimate.py  utils.py  (+1 more)
tests/: __init__.py  assets_path_test.py  conftest.py  constants_test.py  data_test.py  driver_ground_tem_test.py  driver_test.py  locations_test.py  meshes_test.py  models_test.py  params_test.py  preprocessing_test.py  testing_utils.py  topography_test.py  uijson_test.py  utils_meshes_test.py  utils_regularization_test.py  utils_surveys_test.py  version_test.py
uml/: classes_gravity_options.puml  classes_uijson.puml  generate_gravity_options_uml.bat  new_gravity_options.puml  uml_readme.txt
(+226 files in other folders)
